target/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'='", "'<>'", 
                     "'<'", "'<='", "'>='", "'>'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "';'", "':'", "','", "'..'", "':='" ]

    symbolicNames = [ "<INVALID>", "ADD", "SUB", "MUL", "DIVISION", "EQUAL", 
                      "NOTEQUAL", "LT", "LE", "GE", "GT", "LB", "RB", "LSB", 
                      "RSB", "LP", "RP", "SEMI", "COLON", "COMMA", "DOUBLEDOT", 
                      "ASSIGN", "CMT1", "CMT2", "CMT3", "BOOLEANLIT", "VAR", 
                      "FUNCTION", "PROCEDURE", "BREAK", "CONTINUE", "FOR", 
                      "TO", "DOWNTO", "DO", "IF", "THEN", "ELSE", "RETURN", 
                      "WHILE", "BEGIN", "END", "TRUE", "FALSE", "ARRAY", 
                      "OF", "INTEGER", "BOOLEAN", "REAL", "STRING", "NOT", 
                      "AND", "OR", "DIV", "MOD", "WITH", "INTLIT", "REALLIT", 
                      "STRINGLIT", "ID", "WS", "UNCLOSESTRING", "ILLEGALESCAPE", 
                      "ERRORCHAR" ]

    RULE_program = 0
    RULE_vardecl = 1
    RULE_funcdecl = 2
    RULE_procdecl = 3
    RULE_paramdecl = 4
    RULE_param = 5
    RULE_exp = 6
    RULE_exp1 = 7
    RULE_exp2 = 8
    RULE_exp3 = 9
    RULE_exp4 = 10
    RULE_exp5 = 11
    RULE_exp6 = 12
    RULE_indexexp = 13
    RULE_invocationexp = 14
    RULE_listexpression = 15
    RULE_statements = 16
    RULE_linestatement = 17
    RULE_blockstatement = 18
    RULE_assignmentstm = 19
    RULE_assignments = 20
    RULE_ifstm = 21
    RULE_whilestm = 22
    RULE_forstm = 23
    RULE_breakstm = 24
    RULE_continuestm = 25
    RULE_returnstm = 26
    RULE_compoundstm = 27
    RULE_withstm = 28
    RULE_callstm = 29
    RULE_mptype = 30
    RULE_primitivetype = 31
    RULE_compoundtype = 32
    RULE_arrayvalue = 33

    ruleNames =  [ "program", "vardecl", "funcdecl", "procdecl", "paramdecl", 
                   "param", "exp", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "exp6", "indexexp", "invocationexp", "listexpression", 
                   "statements", "linestatement", "blockstatement", "assignmentstm", 
                   "assignments", "ifstm", "whilestm", "forstm", "breakstm", 
                   "continuestm", "returnstm", "compoundstm", "withstm", 
                   "callstm", "mptype", "primitivetype", "compoundtype", 
                   "arrayvalue" ]

    EOF = Token.EOF
    ADD=1
    SUB=2
    MUL=3
    DIVISION=4
    EQUAL=5
    NOTEQUAL=6
    LT=7
    LE=8
    GE=9
    GT=10
    LB=11
    RB=12
    LSB=13
    RSB=14
    LP=15
    RP=16
    SEMI=17
    COLON=18
    COMMA=19
    DOUBLEDOT=20
    ASSIGN=21
    CMT1=22
    CMT2=23
    CMT3=24
    BOOLEANLIT=25
    VAR=26
    FUNCTION=27
    PROCEDURE=28
    BREAK=29
    CONTINUE=30
    FOR=31
    TO=32
    DOWNTO=33
    DO=34
    IF=35
    THEN=36
    ELSE=37
    RETURN=38
    WHILE=39
    BEGIN=40
    END=41
    TRUE=42
    FALSE=43
    ARRAY=44
    OF=45
    INTEGER=46
    BOOLEAN=47
    REAL=48
    STRING=49
    NOT=50
    AND=51
    OR=52
    DIV=53
    MOD=54
    WITH=55
    INTLIT=56
    REALLIT=57
    STRINGLIT=58
    ID=59
    WS=60
    UNCLOSESTRING=61
    ILLEGALESCAPE=62
    ERRORCHAR=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def vardecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VardeclContext)
            else:
                return self.getTypedRuleContext(MPParser.VardeclContext,i)


        def funcdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.FuncdeclContext)
            else:
                return self.getTypedRuleContext(MPParser.FuncdeclContext,i)


        def procdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ProcdeclContext)
            else:
                return self.getTypedRuleContext(MPParser.ProcdeclContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 71
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MPParser.VAR]:
                    self.state = 68
                    self.vardecl()
                    pass
                elif token in [MPParser.FUNCTION]:
                    self.state = 69
                    self.funcdecl()
                    pass
                elif token in [MPParser.PROCEDURE]:
                    self.state = 70
                    self.procdecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.VAR) | (1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE))) != 0)):
                    break

            self.state = 75
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ParamContext)
            else:
                return self.getTypedRuleContext(MPParser.ParamContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MPParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(MPParser.VAR)
            self.state = 81 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 78
                self.param()
                self.state = 79
                self.match(MPParser.SEMI)
                self.state = 83 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def mptype(self):
            return self.getTypedRuleContext(MPParser.MptypeContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compoundstm(self):
            return self.getTypedRuleContext(MPParser.CompoundstmContext,0)


        def paramdecl(self):
            return self.getTypedRuleContext(MPParser.ParamdeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MPParser.VardeclContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = MPParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(MPParser.FUNCTION)
            self.state = 86
            self.match(MPParser.ID)
            self.state = 87
            self.match(MPParser.LB)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 88
                self.paramdecl()


            self.state = 91
            self.match(MPParser.RB)
            self.state = 92
            self.match(MPParser.COLON)
            self.state = 93
            self.mptype()
            self.state = 94
            self.match(MPParser.SEMI)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 95
                self.vardecl()


            self.state = 98
            self.compoundstm()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compoundstm(self):
            return self.getTypedRuleContext(MPParser.CompoundstmContext,0)


        def paramdecl(self):
            return self.getTypedRuleContext(MPParser.ParamdeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MPParser.VardeclContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_procdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcdecl" ):
                return visitor.visitProcdecl(self)
            else:
                return visitor.visitChildren(self)




    def procdecl(self):

        localctx = MPParser.ProcdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_procdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(MPParser.PROCEDURE)
            self.state = 101
            self.match(MPParser.ID)
            self.state = 102
            self.match(MPParser.LB)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 103
                self.paramdecl()


            self.state = 106
            self.match(MPParser.RB)
            self.state = 107
            self.match(MPParser.SEMI)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 108
                self.vardecl()


            self.state = 111
            self.compoundstm()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ParamContext)
            else:
                return self.getTypedRuleContext(MPParser.ParamContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_paramdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamdecl" ):
                return visitor.visitParamdecl(self)
            else:
                return visitor.visitChildren(self)




    def paramdecl(self):

        localctx = MPParser.ParamdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_paramdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 113
                    self.param()
                    self.state = 114
                    self.match(MPParser.SEMI) 
                self.state = 120
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 121
            self.param()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.ID)
            else:
                return self.getToken(MPParser.ID, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def mptype(self):
            return self.getTypedRuleContext(MPParser.MptypeContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MPParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 123
                    self.match(MPParser.ID)
                    self.state = 124
                    self.match(MPParser.COMMA) 
                self.state = 129
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 130
            self.match(MPParser.ID)
            self.state = 131
            self.match(MPParser.COLON)
            self.state = 132
            self.mptype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp1(self):
            return self.getTypedRuleContext(MPParser.Exp1Context,0)


        def exp(self):
            return self.getTypedRuleContext(MPParser.ExpContext,0)


        def AND(self):
            return self.getToken(MPParser.AND, 0)

        def THEN(self):
            return self.getToken(MPParser.THEN, 0)

        def OR(self):
            return self.getToken(MPParser.OR, 0)

        def ELSE(self):
            return self.getToken(MPParser.ELSE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)



    def exp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.ExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_exp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.exp1()
            self._ctx.stop = self._input.LT(-1)
            self.state = 147
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MPParser.ExpContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                    self.state = 137
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 142
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [MPParser.AND]:
                        self.state = 138
                        self.match(MPParser.AND)
                        self.state = 139
                        self.match(MPParser.THEN)
                        pass
                    elif token in [MPParser.OR]:
                        self.state = 140
                        self.match(MPParser.OR)
                        self.state = 141
                        self.match(MPParser.ELSE)
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 144
                    self.exp1() 
                self.state = 149
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Exp1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Exp2Context)
            else:
                return self.getTypedRuleContext(MPParser.Exp2Context,i)


        def EQUAL(self):
            return self.getToken(MPParser.EQUAL, 0)

        def NOTEQUAL(self):
            return self.getToken(MPParser.NOTEQUAL, 0)

        def LT(self):
            return self.getToken(MPParser.LT, 0)

        def LE(self):
            return self.getToken(MPParser.LE, 0)

        def GT(self):
            return self.getToken(MPParser.GT, 0)

        def GE(self):
            return self.getToken(MPParser.GE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp1" ):
                return visitor.visitExp1(self)
            else:
                return visitor.visitChildren(self)




    def exp1(self):

        localctx = MPParser.Exp1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_exp1)
        self._la = 0 # Token type
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.exp2(0)
                self.state = 151
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.EQUAL) | (1 << MPParser.NOTEQUAL) | (1 << MPParser.LT) | (1 << MPParser.LE) | (1 << MPParser.GE) | (1 << MPParser.GT))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 152
                self.exp2(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.exp2(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Exp2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp3(self):
            return self.getTypedRuleContext(MPParser.Exp3Context,0)


        def exp2(self):
            return self.getTypedRuleContext(MPParser.Exp2Context,0)


        def ADD(self):
            return self.getToken(MPParser.ADD, 0)

        def SUB(self):
            return self.getToken(MPParser.SUB, 0)

        def OR(self):
            return self.getToken(MPParser.OR, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp2" ):
                return visitor.visitExp2(self)
            else:
                return visitor.visitChildren(self)



    def exp2(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.Exp2Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_exp2, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.exp3(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 165
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MPParser.Exp2Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_exp2)
                    self.state = 160
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 161
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.ADD) | (1 << MPParser.SUB) | (1 << MPParser.OR))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 162
                    self.exp3(0) 
                self.state = 167
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Exp3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp4(self):
            return self.getTypedRuleContext(MPParser.Exp4Context,0)


        def exp3(self):
            return self.getTypedRuleContext(MPParser.Exp3Context,0)


        def DIV(self):
            return self.getToken(MPParser.DIV, 0)

        def MUL(self):
            return self.getToken(MPParser.MUL, 0)

        def MOD(self):
            return self.getToken(MPParser.MOD, 0)

        def AND(self):
            return self.getToken(MPParser.AND, 0)

        def DIVISION(self):
            return self.getToken(MPParser.DIVISION, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp3

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp3" ):
                return visitor.visitExp3(self)
            else:
                return visitor.visitChildren(self)



    def exp3(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.Exp3Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_exp3, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.exp4()
            self._ctx.stop = self._input.LT(-1)
            self.state = 176
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MPParser.Exp3Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_exp3)
                    self.state = 171
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 172
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.MUL) | (1 << MPParser.DIVISION) | (1 << MPParser.AND) | (1 << MPParser.DIV) | (1 << MPParser.MOD))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 173
                    self.exp4() 
                self.state = 178
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Exp4Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp4(self):
            return self.getTypedRuleContext(MPParser.Exp4Context,0)


        def NOT(self):
            return self.getToken(MPParser.NOT, 0)

        def SUB(self):
            return self.getToken(MPParser.SUB, 0)

        def exp5(self):
            return self.getTypedRuleContext(MPParser.Exp5Context,0)


        def getRuleIndex(self):
            return MPParser.RULE_exp4

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp4" ):
                return visitor.visitExp4(self)
            else:
                return visitor.visitChildren(self)




    def exp4(self):
